--- a/src/main/resources/templates/userspace/blog.html
+++ b/src/main/resources/templates/userspace/blog.html
@@ -16,7 +16,6 @@
             <!-- Blog Post -->
             <div class="card mb-4">
                 <div class="card-block">
-
                     <h2 class="card-title">
 							<span>
 			                  <a href="/u/waylau" title="waylau" th:href="'/u/' + ${blogModel.user.username}"  th:title="${blogModel.user.username}" >
@@ -29,19 +28,17 @@
                         </a>
                     </h2>
                     <div class="card-text">
-                        <a href="/u/waylau" th:href="'/u/' + ${blogModel.user.username}" class="card-link" th:text="${blogModel.user.username}" >waylau</a> Created on [[${#dates.format(blogModel.createTime, 'yyyy-MM-dd HH:mm')}]]
-                        <i class="fa fa-eye" aria-hidden="true">[[${blogModel.reading}]]</i>
-                        <i class="fa fa-heart-o" aria-hidden="true">[[${blogModel.likes}]]</i>
-                        <i class="fa fa-comment-o" aria-hidden="true">[[${blogModel.comments}]]</i>
+                        <a href="/u/waylau" th:href="'/u/' + ${blogModel.user.username}" class="card-link" th:text="${blogModel.user.username}" >waylau</a> Post on [[${#dates.format(blogModel.createTime, 'yyyy-MM-dd HH:mm')}]]
+                        <i class="fa fa-eye" aria-hidden="true">[[${blogModel.readSize}]]</i>
+                        <i class="fa fa-heart-o" aria-hidden="true">[[${blogModel.voteSize}]]</i>
+                        <i class="fa fa-comment-o" aria-hidden="true">[[${blogModel.commentSize}]]</i>
                         <a href="/u/waylau" th:if="${isBlogOwner}" th:href="'/u/' + ${blogModel.user.username}+ '/blogs/edit/'+ ${blogModel.id}" class="btn btn-primary float-right">Edit</a>
-                        <a href="javascript:void(0)" th:if="${isBlogOwner}" th:attr="blogUrl='/u/' + ${blogModel.user.username} + '/blogs/'+ ${blogModel.id}"class="btn btn-primary float-right blog-delete-blog">Delete</a>
+                        <a href="javascript:void(0)" th:if="${isBlogOwner}" class="btn btn-primary float-right blog-delete-blog">Delete</a>
                     </div>
-
                     <hr>
                     <article class="post-content" th:utext="${blogModel.htmlContent}">
 
                     </article>
-
                     <hr>
                 </div>
                 <div class="card-block">
@@ -68,26 +65,27 @@
                     <h5>Comment：</h5>
                     <div class="row">
                         <div class="col-lg-12">
-                            <textarea class="blog-textarea" placeholder="看帖需留言~"></textarea>
+                            <textarea class="blog-textarea" placeholder="看帖需留言~" id="commentContent"></textarea>
                         </div>
                     </div>
-                    <button class="btn btn-primary float-right">Comment</button>
-
+                    <button class="btn btn-primary float-right" id="submitComment">Post Comment</button>
+                    <button class="btn btn-primary float-right" th:if="${currentVote} == null" id="submitVote">Like</button>
+                    <button class="btn btn-primary float-right" th:if="${currentVote}" th:attr="voteId=${currentVote.id}" id="cancelVote">Unlike</button>
                 </div>
-                <div class="card-block">
+                <div class="card-block" id="mainContainer">
 
-                    <div class="row">
+                    <div class="row" id="mainContainerRepleace" th:each="comment,commentStat : ${comments}" th:object="${comment}">
                         <h2 class="card-title col-lg-1 col-md-2">
 							<span>
-			                  <a href="/u/waylau" title="waylau">
-			                    <img src="https://waylau.com/images/waylau_181_181.jpg" class="blog-avatar-50"
-                                     alt="waylau">
+			                  <a href="/u/waylau" th:href="'/u/'+ *{user.username}" title="waylau" th:title="*{user.username}">
+			                    <img src="/images/avatar-defualt.jpg" th:src="*{user.avatar} == null ? '/images/avatar-defualt.jpg' : *{user.avatar}" class="blog-avatar-50">
 			                  </a>
 					        </span>
                         </h2>
                         <div class="card-text col-lg-11 col-md-10">
-                            <a href="/u/waylau" class="card-link">waylau</a> 1楼 2017-03-17 14:20
-                            <p>不错哦，顶起！</p>
+                            <a href="/u/waylau" th:href="'/u/'+ *{user.username}" class="card-link" th:text="*{user.username}">waylau</a> [[${commentStat.index} + 1]]楼  [[${#dates.format(comment.createTime, 'yyyy-MM-dd HH:mm')}]]
+                            <a href="javascript:void(0)" class="blog-delete-comment" th:if="${commentOwner} eq *{user.username}" th:attr="commentId=*{id}"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+                            <p th:text="*{content}">不错哦，顶起！</p>
                         </div>
                     </div>
 
@@ -147,6 +145,12 @@
 
 
 <div th:replace="~{fragments/footer :: footer}">...</div>
+
+<!-- JavaScript -->
+<script th:inline="javascript">
+    var blogId = [[${blogModel.id}]];
+    var blogUrl = '/u/' + [[${blogModel.user.username}]] + '/blogs/'+ [[${blogModel.id}]] ;
+</script>
 <script src="../../js/userspace/blog.js" th:src="@{/js/userspace/blog.js}"></script>
 </body>
 </html>
