--- a/src/main/resources/templates/userspace/blogedit.html
+++ b/src/main/resources/templates/userspace/blogedit.html
@@ -43,63 +43,51 @@
 
         <!-- 右侧栏目 -->
         <div class="col-md-4">
-            <div>
-                <!-- 文章目录 -->
-                <div class="card ">
-                    <h5 class="card-header"><i class="fa fa-cog" aria-hidden="true"></i> 博客设置</h5>
-                    <div class="card-block">
-                        <div class="row mt-1">
-                            <div  class="col-lg-12">
-                                标签： 					<input type="text" class="form-control form-control-tag">
-                            </div>
+
+            <!-- 文章目录 -->
+            <!--<div class="card ">-->
+                <!--<h5 class="card-header"><i class="fa fa-file-image-o" aria-hidden="true"></i> 图片上传</h5>-->
+                <!--<div class="card-block">-->
+                    <!--<div class="row mt-1">-->
+                        <!--<div  class="col-lg-12">-->
+
+
+                            <!--<form  enctype="multipart/form-data"  id="uploadformid"  >-->
+                                <!--<input type="file" name="file" accept="image/png,image/gif,image/jpeg" id="file">-->
+                                <!--<button class="btn btn-primary float-right"  type="button" id="uploadImage" >插入</button>-->
+
+                            <!--</form>-->
+
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+
+            <!--</div>-->
+            <!-- 图片上传 -->
+            <div class="card ">
+                <h5 class="card-header"><i class="fa fa-cog" aria-hidden="true"></i> 博客设置</h5>
+                <div class="card-block">
+                    <div class="row mt-1">
+                        <div  class="col-lg-12">
+                            标签： 					<input type="text" class="form-control form-control-tag">
                         </div>
-                        <div class="row mt-1">
-                            <div  class="col-lg-12">
-                                分类：					<select id="single" class="form-control form-control-chosen" data-placeholder="请选择">
-								  <option>Java</option>
-								  <option>分布式</option>
-								  <option>数据库</option>
-								</select>
-                            </div>
+                    </div>
+                    <div class="row mt-1">
+                        <div  class="col-lg-12">
+                            分类：					<select id="single" class="form-control form-control-chosen" data-placeholder="请选择">
+                            <option>Java</option>
+                            <option>分布式</option>
+                            <option>数据库</option>
+                        </select>
                         </div>
-                        <div class="row mt-1">
-                            <div  class="col-lg-12">
-								<button class="btn btn-primary float-right">发布</button>
-                            </div>
+                    </div>
+                    <div class="row mt-1">
+                        <div  class="col-lg-12">
+                            <button class="btn btn-primary float-right" id="submitBlog"  th:attr="userName=${#authentication.name}">发布</button>
                         </div>
-                        
                     </div>
 
                 </div>
-
-                <!-- 图片上传 -->
-                <div class="card ">
-                    <h5 class="card-header"><i class="fa fa-cog" aria-hidden="true"></i> 博客设置</h5>
-                    <div class="card-block">
-                        <div class="row mt-1">
-                            <div  class="col-lg-12">
-                                Tag： 					<input type="text" class="form-control form-control-tag">
-                            </div>
-                        </div>
-                        <div class="row mt-1">
-                            <div  class="col-lg-12">
-                                Category：				<select id="single" class="form-control form-control-chosen" data-placeholder="请选择">
-                                <option>Java</option>
-                                <option>分布式</option>
-                                <option>数据库</option>
-                            </select>
-                            </div>
-                        </div>
-                        <div class="row mt-1">
-                            <div  class="col-lg-12">
-                                <button class="btn btn-primary float-right" id="submitBlog"  th:attr="userName=${#authentication.name}">Post</button>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
-
 
             </div>
         </div>
@@ -113,9 +101,6 @@
 
 <div th:replace="~{fragments/footer :: footer}">...</div>
 
-<script th:inline="javascript">
-    var fileServerUrl = [[${blogModel.fileServerUrl}]];
-</script>
 
 <script src="../../js/userspace/blogedit.js" th:src="@{/js/userspace/blogedit.js}"></script>
  
