--- a/src/main/resources/templates/userspace/u.html
+++ b/src/main/resources/templates/userspace/u.html
@@ -44,29 +44,32 @@
 
             <hr>
 
-	      <!-- 分类 -->
-	        <div class="card my-4">
-	            <h5 class="card-header"><i class="fa fa-bars" aria-hidden="true"></i> 分类</h5>
-	
-	            <ul class="list-group">
-	                <a href="/u/waylau/blogs?category=11" class="list-group-item" title="waylau">
-	                    Spring Data<span class="badge badge-default badge-pill">11115</span>
-	                </a>
-	                <a href="/u/waylau/blogs?category=11" class="list-group-item" title="waylau">
-	                    	分布式系统<span class="badge badge-default badge-pill">338</span>
-	                </a>
-	                <a href="/u/waylau/blogs?category=11" class="list-group-item" title="waylau">
-	                   	Java<span class="badge badge-default badge-pill">289</span>
-	                </a>
-	                <a href="/u/waylau/blogs?category=11" class="list-group-item" title="waylau">
-	                   Eclipse<span class="badge badge-default badge-pill">189</span>
-	                </a>
-	
-	                <a href="/u/waylau/blogs?category=11" class="list-group-item" title="waylau">
-	                     Plugin<span class="badge badge-default badge-pill">189</span>
-	                </a>
-	            </ul>
-	        </div>
+            <!-- 分类 -->
+            <div id="catalogMain">
+                <div class="card my-4" id="catalogRepleace">
+                    <h5 class="card-header"><i class="fa fa-bars" aria-hidden="true"></i> Catalog <a href="javascript:void(0)" th:if="${isCatalogsOwner}" class="blog-add-catalog blog-right" data-toggle="modal"
+                                                                                                data-target="#flipFlop" role="button"><i
+                            class="fa fa-plus" aria-hidden="true"></i></a></h5>
+
+                    <ul class="list-group" th:each="catalog : ${catalogs}" th:object="${catalog}">
+                        <div class="blog-list-group-item">
+
+
+                            <a href="javascript:void(0)" th:attr="catalogId=*{id}" class="blog-query-by-catalog">
+                                [[*{name}]]
+                            </a>
+                            <span class="blog-right">
+	                		<a href="javascript:void(0)" th:if="${isCatalogsOwner}" class="blog-edit-catalog" data-toggle="modal"
+                               data-target="#flipFlop" role="button" th:attr="catalogId=*{id}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+	                		<a href="javascript:void(0)" th:if="${isCatalogsOwner}" class="blog-delete-catalog" th:attr="catalogId=*{id}"><i class="fa fa-times" aria-hidden="true"></i></a>
+	            		</span>
+
+                        </div>
+
+
+                    </ul>
+                </div>
+            </div>
         </div>
         
    
@@ -112,14 +115,14 @@
                             <p class="card-text" th:text="${blog.summary}">使用 OAuth 2.0 认证的的好处是显然易见的。你只需要用同一个账号密码，就能在各个网站进行访问，而免去了在每个网站都进行注册的繁琐过程。 本文将介绍
                                 OAuth 2.0 的原理，并基于 Spring Security 和 GitHub 账号，来演示 OAuth 2.0 的认证的过程。</p>
                             <div class="card-text">
-                                Created on [[${#dates.format(blog.createTime, 'yyyy-MM-dd HH:mm')}]] <i class="fa fa-eye" aria-hidden="true">[[${blog.reading}]]</i>
-                                <i class="fa fa-heart-o" aria-hidden="true">[[${blog.likes}]]</i> <i class="fa fa-comment-o"
-                                                                                                     aria-hidden="true">[[${blog.comments}]]</i>
+                                发表于 [[${#dates.format(blog.createTime, 'yyyy-MM-dd HH:mm')}]] <i class="fa fa-eye" aria-hidden="true">[[${blog.readSize}]]</i>
+                                <i class="fa fa-heart-o" aria-hidden="true">[[${blog.voteSize}]]</i> <i class="fa fa-comment-o"
+                                                                                                        aria-hidden="true">[[${blog.commentSize}]]</i>
                             </div>
                         </div>
                     </div>
 
-                    <!--<div th:replace="~{fragments/page :: page}">...</div>-->
+                    <div th:replace="~{fragments/page :: page}">...</div>
                 </div>
             </div>
 
@@ -152,6 +155,27 @@
 </div>
 <!-- /.container -->
 
+<!-- The modal -->
+<div class="modal fade" id="flipFlop" tabindex="-1" role="dialog"
+     aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="modalLabel">Create/Edit</h4>
+                <button type="button" class="close" data-dismiss="modal"
+                        aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+
+            </div>
+            <div class="modal-body" id="catalogFormContainer"></div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" data-dismiss="modal" id="submitEditCatalog">Submit</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div th:replace="~{fragments/footer :: footer}">...</div>
 
